# sdhypermodern-python

./: .coverage  .flake8  .python-version  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: coverage.yml  release-drafter.yml  release.yml  test-pypi.yml  tests.yml
docs/: conf.py  index.rst  reference.rst
src/sdhypermodern_python/: .flake8  .readthedocs.yml  __init__.py  console.py  test-pypi.yml  wikipedia.py
src/sdhypermodern_python/.github/workflows/: tests.yml
tests/: .coverage  __init__.py  test_console.py  test_wikipedia.py
