[tool.poetry]
name = "sdhypermodern-python"
version = "0.3.0"
description = "The hypermodern Python project"
authors = ["Semio Dsouza <semiod@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sdhypermodern_python", from = "src"}]
homepage = "https://github.com/semiod/sdhypermodern-python"
repository = "https://github.com/semiod/sdhypermodern-python"
documentation = "https://sdhypermodern-python.readthedocs.io"
keywords = ["sdhypermodern"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.6"
requests = "^2.31.0"
desert = "^2022.9.22"
marshmallow = "^3.20.1"
importlib-metadata = {version = "^1.5.0", python = "<3.8"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
coverage = {extras = ["toml"], version = "^7.2.7"}
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
black = "^23.7.0"
flake8 = "^6.1.0"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^23.7.10"
flake8-import-order = "^0.18.2"
safety = "^2.3.5"
mypy = "^1.4.1"
pytype = {version = "^2023.7.28", python = "3.9"}
typeguard = "^4.1.0"
flake8-annotations = "^3.0.1"
flake8-docstrings = "^1.7.0"
darglint = "^1.8.1"
xdoctest = "^1.1.1"
sphinx = "^7.1.2"
sphinx-autodoc-typehints = "^1.24.0"
codecov = "^2.1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sdhypermodern-python = "sdhypermodern_python.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["sdhypermodern_python"]

[tool.coverage.report]
show_missing = true
fail_under = 100